packages/toi/test/fixtures/invalid/missing-author.toi
{
  "$toi": "1.0.0",
  "$tier": "personal",
  "identity": {
    "handle": "no-author"
  }
}
